# graphApp

./: docker-compose.yml  pyproject.toml
src/: main.py
src/api/: __init__.py  routes.py  test_db.py
src/database/: config.py
src/models/: person.py
src/modules/person/: __init__.py
src/modules/person/api/: person_router.py
src/modules/person/app/: __init__.py  create_friendship_use_case.py  save_person_use_case.py
src/modules/person/domain/: __init__.py  friendship.py  person.py  person_repo.py  person_service.py
src/modules/person/domain/validations/: __init__.py  job_enum.py  level_enum.py  profession_enum.py
src/modules/person/infra/: __init__.py
src/modules/person/infra/repo/neo4j/: friendship_orm.py  person_orm.py  person_repo_impl.py
src/shared/DIContainer/: container.py
